--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -4,13 +4,15 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffffff;
+  white-space: normal;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0 !important;
 }
 
 a {
@@ -22,47 +24,169 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+h1 {
+  min-width: 200px;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-size: 2em;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+input {outline:none;}
 
 button {
+  color: #ffffff;
+  background-color: #f80000;
+  border: 2px #f80000 solid;
   border-radius: 8px;
-  border: 1px solid transparent;
+  border-top-left-radius: 0px !important;
+  border-bottom-left-radius: 0px !important;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ff2600;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #8d1500;
+  background-color: #8d1500;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.header__pic{
+  width: 10vw;
+  min-width: 300px;
+}
+
+.header__name{
+  min-width: 200px;
+  font-size: 2em;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.header__inctruction{
+  margin-top: 50px;
+  display: grid;
+  justify-content: center;
+  max-width: 830px;
+  min-width: 290px;
+  text-align: left;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 350px));
+  grid-auto-flow: row;
+  grid-template-rows: auto auto;
+  gap: 25px;
+  
+  font-weight: 600;
+}
+
+.header__block{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 115px;
+  border-radius: 8px;
+  padding: 5px;
+  background-color: #ff816a;
+  color: #ffffff
+}
+
+.header__text-instruct{
+  margin-left: 5px;
+}
+
+.header__text-instruct > span{
+  margin-bottom: 1px;
+  border-bottom: 1px dotted #f80000;
+}
+
+.header__full{
+  background-color: rgba(68, 76, 226, .5);
+}
+
+.header__id{
+  background-color: rgba(12, 129, 80, 0.5);
+}
+
+.header__type{
+  background-color: rgba(1, 100, 214, 0.5);
+}
+
+.header__generation{
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+.header__text-instruct{
+  width: 90%;
+}
+.header__image-full{
+  width: 96px;
+  height: 96px;
+  background-image: url(./assets/032.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 96px 96px;
+}
+
+.header__image-id{
+  width: 96px;
+  height: 96px;
+  background-image: url(./assets/281.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 96px 96px;
+}
+
+.header__image-type{
+  width: 96px;
+  height: 96px;
+  background-image: url(./assets/502.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 96px 96px;
+}
+
+.header__image-gen{
+  width: 96px;
+  height: 96px;
+  background-image: url(./assets/006.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 96px 96px;
+}
+
+.header__form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30vw;
+  min-width: 220px;
+  margin-top: 30px;
+}
+
+.header__search{
+  width: 30vw;
+  min-width: 200px;
+  border: 2px #f80000 solid;
+  font-size: 1em;
+  padding: 0.67em 0px 0.67em 1em;
+  font-weight: 600;
+}
+
+.header__button{
+  background-image: url(./assets/loop.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px 16px;
+  min-width: 20px;
+  height: 44px;
 }
