--- a/class-components/src/index.css
+++ b/class-components/src/index.css
@@ -89,9 +89,11 @@ button:focus-visible {
   max-width: 830px;
   min-width: 290px;
   text-align: left;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 350px));
+  /*grid-template-columns: repeat(auto-fill, minmax(140px, 350px));*/
+  max-width: 350px;
+  min-width: 140px;
   grid-auto-flow: row;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto;
   gap: 25px;
 
   font-weight: 600;
@@ -118,6 +120,7 @@ button:focus-visible {
 }
 
 .header__full {
+  display: none;
   background-color: rgba(68, 76, 226, 0.5);
 }
 
